api/templates/default/etemplate2.css
/* ... */
.et2_link_to.et2_toolbar span.et2_file_span {
    padding-right: 0;
}

.et2_link, et2-link {
    cursor: pointer;
    color: #003075;
    text-decoration: none;
}

.et2_link:hover, et2-link:hover {
    text-decoration: underline;
}

ul.et2_link_string {
    list-style-type: none;
    display: inline;
    padding: 0px;
}

.et2_link_string li {
    display: inline;
}

.et2_link_string li:not(:last-child):after {
    content: '\002C\00A0';
}

.et2_link_list {
    border-collapse: collapse;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    white-space: normal;
}

.et2_link_list tr {
    cursor: pointer;
}

.et2_link_list td.remark, et2-link-list .remark {
    font-style: italic;
}

.et2_link_list td div.delete, .et2_vfs td div.delete {
    visibility: hidden;
    background-image: url("images/close.png");
    background-position: center;
    background-repeat: no-repeat;
    padding: 0px;
    width: 16px;
    height: 16px;
}

et2-link-list et2-link {
    color: initial;
    width: 30%;
}

et2-link-list et2-link:hover {
    text-decoration: initial;
}

.et2_link_list .icon img,
.et2_vfs .icon img {
    width: 16px;
    height: 16px;
    display: inline-block;
}

div.et2_vfsPath {
    position: relative;
}

div.et2_vfsPath ul {
    position: absolute;
    top: 0px;
    left: 0px;
    padding: 0px;
    margin: 0px;
    margin-right: 4px;
    display: flex;
    justify-content: flex-start;
    flex-flow: row nowrap;
    /* This hides the higher level directories if overflow */
    direction: rtl;
    height: 100%;
    overflow-y: hidden;
    overflow-x: auto;
    max-width: 92%;
    margin-right: 7%;
}

div.et2_vfsPath ul::-webkit-scrollbar {
    background: transparent;
    overflow-y: hidden;
    width: 1px;
}

div.et2_vfsPath ul::-webkit-scrollbar-thumb {
    background: transparent;
    width: 1px;
    border-radius: 0px;
    height: 1px;
}

div.et2_vfsPath li {
    direction: ltr;
    display: inline-block;
    padding-right: 5px;
    flex: none;
    padding-top: 9px;
    color: #26537C;
    border-radius: 5px 0px 0px 5px;
}

div.et2_vfsPath ul.scrollable li {
    cursor: url(images/mouse_scroll_lr.svg) 20 1, pointer;
}

li.vfsPath.et2_clickable:first-child {
    font-weight: bold;
}

li.vfsPath.et2_clickable:last-child:before {
    content: '/';
    width: 5px;
    padding-left: 10px;
    padding-right: 2px;
}

li.vfsPath.et2_clickable:last-child:after {
    display: none !important;
}

li.vfsPath.et2_clickable:not(:first-child):after {
    content: '/';
    width: 8px;
    height: 8px;
    margin-left: 5px;
    display: inline-block;
    font-size: 8pt;
}

.et2_vfsPath input.et2_textbox.et2_vfs {
    background-image: url(images/edit.png);
    background-repeat: no-repeat;
    background-size: 16px;
    background-position: center;
    background-position-x: 98%;
}

div.et2_vfsPath li:hover {
    text-decoration: underline;
}

div.et2_vfsPath li img {
    height: 12px;
    float: left;
    margin: 0px;
    margin-left: 3px;
    margin-right: 5px;
}

.et2_link_list tr:hover div.delete, .et2_vfs tr:hover div.delete {
    visibility: visible;
}

.egw_tooltip {
    position: fixed;
    border: 1px solid #897f51;
    background-color: #FDF9DB;
    max-width: 300px;
    color: black;
    z-index: 1002;
    -webkit-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.75);
    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.75);
    white-space: pre-wrap;
}

/**
 * New et2-tabbox widget
 */
et2-tab-panel {
    padding-top: 1em;
}

/**
 * Tabs widget
 */
.et2_tabflag {
    display: inline-block;
    margin-right: 5px;
    padding: 5px;
    min-width: 60px;
    cursor: pointer;
    border: 1px solid silver;
    background-color: #E0E0E0;
    background-position: center;
    background-repeat: repeat-x;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

.et2_tabflag a:link, .et2_tabflag a:visited, .et2_tabflag a:hover {
    color: inherit;
    text-decoration: none;
}

.et2_tabflag:hover {
    color: #050505;
    border: 1px solid gray;
    background-color: #D0D0EE;
}

.et2_tabflag:active {
    background-color: #D0D0E0;
}

.et2_tabs {
    border-width: 0px 1px 1px 1px;
    border-style: solid;
    border-color: silver;
    padding: 5px;
    overflow-y: auto;
}

.et2_tabcntr {
    height: inherit;
}

.et2_tabflag.active {
    border-bottom: 1px solid white;
    background-color: white;
    background-image: none;
}

.et2_tabheader {
    background-image: url(images/tab_header_bg.png);
    background-position: bottom;
    background-repeat: repeat-x;
    white-space: nowrap;
}

.et2_tabbox.vertical .et2_tabflag {
    display: block;
    padding: 0;
}

.et2_tabbox.vertical .et2_tabflag .et2_tabcntr {
    display: none;
}

.et2_tabbox.vertical .et2_tabflag.active .et2_tabcntr {
    display: block;

}

.et2_tabbox.vertical .et2_tabflag div.et2_tabtitle {
    background-color: #C4C4C4;
    padding: 6px 0 6px 0;
}

.et2_tabbox.vertical .et2_tabflag div.et2_tabtitle:before {
    content: "+";
    color: white;
    font-size: 12pt;
    font-weight: bold;
    padding: 3px;
    float: right;
    background-color: #636363;
    border-radius: 3px;
    margin-top: -6px;
}

.et2_tabbox.vertical .et2_tabflag.active div.et2_tabtitle:before {
    content: "\2212";
}

/**
 * Tag list
 */
.ms-ctn,
.ms-res-ctn {
    /* It doesn't really work smaller than this */
    min-width: 150px;
    border: solid 1px #bbbbbb;
}

.ms-ctn .loading {
    position: relative;
    margin: 0px auto -16px auto;
    top: 5px;
    background-image: url('images/ajax-loader.gif');
}

.et2_taglist .ms-input-readonly {
    display: none;
}
/* ... */

